2010-01-15  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-loop-im.c (gen_lsm_tmp_name): Fix bogus fallthru.

2010-01-14  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/42674
	* c-decl.c (finish_function): Don't emit -Wreturn-type warnings in
	functions with noreturn attribute.

	PR c++/42608
	* varasm.c (declare_weak): Add weak attribute to decl if it
	doesn't have one already.
	(assemble_external): Only add decls to weak_decls if they also
	have weak attribute.

2010-01-14  Jakub Jelinek  <jakub@redhat.com>

	PR c/42721
	Port from no-undefined-overflow branch
	2009-03-09  Richard Guenther  <rguenther@suse.de>

	* fold-const.c (add_double_with_sign): Fix unsigned overflow
	detection.

2010-01-14  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	2010-01-10  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42667
	* builtins.c (fold_builtin_strlen): Add type argument and
	convert the resulting length to it.
	(fold_builtin_1): Adjust.

2010-01-13  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/40281
	* tree-scalar-evolution.c (instantiate_scev_1): Base and stride
	evolutions should not variate in inner loops.

2010-01-12  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	* Backport from mainline
	2010-01-12  Julian Brown  <julian@codesourcery.com>
	
        * config/arm/neon-schedgen.ml (Utils): Don't try to
	open missing module.
        (find_with_result): New.

2010-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR debug/42662
	* simplify-rtx.c (simplify_relational_operation_1): Avoid invalid rtx
	sharing when canonicalizing ({lt,ge}u (plus a b) b).

2010-01-09  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c (process_command): Update copyright notice dates.
	* gcov.c (print_version): Likewise.
	* gcov-dump.c (print_version): Likewise.
	* mips-tfile.c (main): Likewise.
	* mips-tdump.c (main): Likewise.

2010-01-07  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-01-05  Paolo Bonzini  <bonzinI@gnu.rg>