@@ -1,3 +1,9 @@
+2010-01-15  Jing Yu  <jingyu@google.com>
+
+	PR rtl-optimization/42691
+	* combine.c (try_combine): Set changed_i3_dest to 1 when I2 and I3 set
+	a pseudo to a constant and are merged, and adjust comments.
+
 2010-01-15  Richard Guenther  <rguenther@suse.de>
 
 	* tree-ssa-loop-im.c (gen_lsm_tmp_name): Fix bogus fallthru.
